[gd_scene load_steps=6 format=2]

[ext_resource path="res://interface/font/monster16.tres" type="DynamicFont" id=1]
[ext_resource path="res://Game/assets/world/Tiles/Medieval/medieval_windmill.png" type="Texture" id=2]
[ext_resource path="res://Game/assets/world/Tiles/Medieval/medieval_mine.png" type="Texture" id=3]
[ext_resource path="res://Game/assets/world/Tiles/Medieval/medieval_lumber.png" type="Texture" id=4]
[ext_resource path="res://Game/ui/BuildMenu.gd" type="Script" id=5]

[node name="BuildMenu" type="Popup"]
visible = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -250.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -250.0
margin_bottom = -1.52588e-05
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -240.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "BUILD MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 25.0
margin_right = 1004.0
margin_bottom = 230.0
size_flags_vertical = 3
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuarryContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 205.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/QuarryContainer"]
margin_right = 120.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "MINE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuarryButton" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer/QuarryContainer"]
margin_top = 25.0
margin_right = 120.0
margin_bottom = 165.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )

[node name="WoodContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 150.0
margin_right = 270.0
margin_bottom = 205.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/WoodContainer"]
margin_right = 120.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "WOOD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WoodButton" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer/WoodContainer"]
margin_top = 25.0
margin_right = 120.0
margin_bottom = 165.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )

[node name="FarmContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 300.0
margin_right = 420.0
margin_bottom = 205.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/FarmContainer"]
margin_right = 120.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "FARM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FarmButton" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer/FarmContainer"]
margin_top = 25.0
margin_right = 120.0
margin_bottom = 165.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/QuarryContainer/QuarryButton" to="." method="_on_QuarryButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/WoodContainer/WoodButton" to="." method="_on_WoodButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/FarmContainer/FarmButton" to="." method="_on_FarmButton_pressed"]
